CERSAT / Formatter https://gitlab.ifremer.fr/sextant/geonetwork/-/issues/328. Alignement.

--- a/web-ui/src/main/resources/catalog/views/sextant/less/sextant-cersat.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/sextant-cersat.less
@@ -42,7 +42,6 @@
     border-radius: 3px;
     display: flex;
     align-items: center;
-    margin-left: -10px;
     margin-top: 10px;
     .cersat-bg-white {
       color: #ff5300;
